# matching-engine-lab

./: .gitignore  BENCHMARK.md  CURSOR.md  README.md
btree/: btree.go  btree.rs
datasets/: README.md
datasets/sample/: medium.ndjson  tiny.ndjson
docs/: interface.md
docs/architecture/: concurrency_model.md  matching_flow.md  scaling_strategy.md  system_overview.md
docs/benchmarks/: latency_profile.md  memory_profile.md  rust_vs_go.md
docs/data_structures/: arena_allocator.md  btree.md  comparison_table.md  heap.md  red_black_tree.md  skiplist.md
go/: go.mod  go.sum
go/cmd/runner/: main.go
go/internal/core/: engine.go  ndjson.go  types.go
go/internal/enginev1_btree/: book.go  engine.go
go/internal/enginev2_treemap/: book.go  engine.go
go/internal/enginev3_pool/: book.go  engine.go
rust/: Cargo.toml
rust/crates/engine_core/: Cargo.toml
rust/crates/engine_core/src/: engine_trait.rs  lib.rs  ndjson.rs  types.rs
rust/crates/engine_v1_btreemap/: Cargo.toml
rust/crates/engine_v1_btreemap/src/: lib.rs
rust/crates/engine_v2_skiplist/: Cargo.toml
rust/crates/engine_v2_skiplist/src/: lib.rs
rust/crates/engine_v2_treemap/: Cargo.toml
rust/crates/engine_v2_treemap/src/: lib.rs
rust/crates/engine_v3_arena/: Cargo.toml
rust/crates/runner/: Cargo.toml
rust/crates/runner/src/: main.rs
spec/: command.schema.json  event.schema.json  ndjson_format.md
tools/bench/: compare.sh  load_test.sh  run_go.sh  run_rust.sh
tools/generator/py/: gen_stream.py  profiles.py
tools/verifier/py/: check_fifo.py  verify_invariants.py
(+1 files in other folders)
